--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "openai": "^4.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
     "ws": "^8.15.0"
   }
 }
