--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "chat-server",
+  "name": "ai-chat-server",
   "version": "1.0.0",
+  "description": "A simple Express server that connects to OpenAI's chat API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "openai": "^4.0.0",
     "cors": "^2.8.5",
-    "ws": "^8.15.0"
+    "express": "^4.18.2",
+    "openai": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
