--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "openai-websocket-server",
+  "name": "chat-ai-server",
   "version": "1.0.0",
-  "description": "Express + WebSocket + OpenAI チャットサーバー",
+  "description": "WebSocket AI Chat Server using Hugging Face",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "ws": "^8.13.0",
-    "openai": "^4.25.0"
-  },
-  "engines": {
-    "node": ">=18"
+    "ws": "^8.13.0"
   }
 }
